fixed mobile bug on slider with overflow-x

--- a/template/Assets/Styles/components/_slider.less
+++ b/template/Assets/Styles/components/_slider.less
@@ -128,12 +128,8 @@
     font-size: 0;
     line-height: 0;
     white-space: nowrap;
-    overflow-y: hidden;
-    overflow-x: auto;
+    overflow: hidden;
     margin: 0 auto;
-    @media @bpMedium{
-        overflow-x: hidden;
-    }
 }
 
 .Slider-list {
